
cmake_minimum_required (VERSION 3.10)
project (eep VERSION 1.0.0)

include(GNUInstallDirs)

add_library (eep SHARED core_hep.c parser_rtcp.c)

file(GLOB EEP_INCLUDES "*.h")
set_target_properties (eep PROPERTIES
  SOVERSION 1
  PUBLIC_HEADER "${EEP_INCLUDES}")

set(PKGCONFIG_FILE ${PROJECT_NAME}.pc)
configure_file(${PKGCONFIG_FILE}.in ${PKGCONFIG_FILE})

install(
  TARGETS ${PROJECT_NAME}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGCONFIG_FILE} DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
